--- a/cikkek/cikkek.html
+++ b/cikkek/cikkek.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cikkek</title>
     <link rel="stylesheet" href="cikkek.css">
-    <script src="cikkek.js"></script>
+ 
+    <script src="kav.js"></script>
     
 </head>
 <body>
@@ -14,7 +15,8 @@
     <article>
        
         <div class = "gombok">
-        <ul>
+        <ul><!-- 
+        <li><button id="KAV">Karányi Alexandra Viktória</button></li> -->
         <li><button onclick="myKAV()">Karányi Alexandra Viktória</button></li>
         <li><button onclick="myVZS()">Vigh Zsófia</button></li>
         <li><button onclick="myPD()">Pipics Dorottya</button></li>
