--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
        <div class="nav">
         <a href="index.html">Bevezető</a>
         <br>
-        <a href="zachar.html">Zachar Veronika</a>
-        <a href="ka.html">Karányi Alexa</a>
-        <a href="vzs.html">Vigh Zsófia</a>
-        <a href="pd.html">Pipics Dorottya</a>
-        <a href="te.html">Tuli Emese</a>
-        <a href="kg.html">Kovács Gréti</a>
-        <a href="bb.html">Bolla Betti</a>
-        <a href="pv.html">PItyer Viktória</a>
-        <a href="ob.html">Oláh Barnara</a>
+        <a href="cikkek/zachar.html">Zachar Veronika</a>
+        <a href="cikkek/ka.html">Karányi Alexa</a>
+        <a href="cikkek/vzs.html">Vigh Zsófia</a>
+        <a href="cikkek/pd.html">Pipics Dorottya</a>
+        <a href="cikkek/te.html">Tuli Emese</a>
+        <a href="cikkek/kg.html">Kovács Gréti</a>
+        <a href="cikkek/bb.html">Bolla Betti</a>
+        <a href="cikkek/pv.html">PItyer Viktória</a>
+        <a href="cikkek/ob.html">Oláh Barnara</a>
     </div>
  <h1></h1>
  <p></p>
