--- a/ob.html
+++ b/ob.html
@@ -7,7 +7,7 @@
     <title>Cikkek</title>
     <link rel="stylesheet" href="cikkek.css">
     
-    <script src="cikkek.js"></script>
+    <script src="ob.js"></script>
     
 </head>
 <body>
