--- a/pv.html
+++ b/pv.html
@@ -7,13 +7,13 @@
     <title>Cikkek</title>
     <link rel="stylesheet" href="cikkek.css">
     
-    <script src="cikkek.js"></script>
+    <script src="pv.js"></script>
     
 </head>
 <body>
     <main>
     <article>
-       <div class="nav">
+        <div class="nav">
         <a href="index.html">Bevezető</a>
         <br>
         <a href="zachar.html">Zachar Veronika</a>
@@ -24,8 +24,8 @@
         <a href="kg.html">Kovács Gréti</a>
         <a href="bb.html">Bolla Betti</a>
         <a href="pv.html">PItyer Viktória</a>
-        <a href="ob.html">Oláh Barnara</a>
-    </div>
+        <a href="ob.html">Oláh Barbnara</a>
+            </div>
  <h1></h1>
  <p></p>
 <img src="" alt="">
